# nai-t5-wrapper

./: .gitignore  LICENSE  README.md  precision.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: float16.md  get-weights.md  tokenizers.md  usage-decoder.md  usage-encoder.md  usage.md
examples/: t5_decoder_basic.py  t5_decoder_basic_nocache.py  t5_decoder_fast.py  t5_decoder_fast_float16.py  t5_encoder_basic.py  t5_encoder_fast.py  t5_encoder_fast_float16.py
nai_t5/: __init__.py  checkpoint_info.py  checkpoint_names.py  f16_scales.py  fuse_norm_scales.py  sampling.py  sp_add_mask_vocab.py  t5.py  t5_common.py  t5_decoder.py  t5_encoder.py  t5_hf.py  weight_load.py
nai_t5/flex/: flex_attn_backport.py  flex_utils.py
nai_t5/scripts/: t5_flex_buckets.py  t5_sampling_hf_generate.py  t5_sampling_parity_cache.py
nai_t5_wrapper/: __init__.py  checkpoint_info.py  fuse_norm_scales.py  hf_wrapper.py  replace_linear.py  t5_common.py  t5_decoder.py  t5_encoder.py  t5_hf.py  weight_load.py
nai_t5_wrapper/scripts/: benchmark_attn.py  benchmark_encoder.py  t5_bucket_test.py  t5_encdec_parity.py  t5_encdec_precision_parity.py  t5_encoder_flex_parity.py  t5_encoder_hf_precision_parity.py  t5_encoder_parity.py  t5_encoder_parity_fsdp.py  t5_encoder_precision_parity.py  t5_flex_buckets.py  t5_sampling_parity_cache.py  t5_sampling_parity_nocache.py  t5_serialize.py  t5_serialize_dtensor.py  tokenizer_hf_to_sentencepiece.py  umt5_encdec_parity.py  umt5_encoder_parity.py
scripts/: benchmark_attn.py  benchmark_encoder.py  t5_bucket_test.py  t5_encdec_parity.py  t5_encdec_precision_parity.py  t5_encoder_flex_parity.py  t5_encoder_hf_precision_parity.py  t5_encoder_parity.py  t5_encoder_parity_fsdp.py  t5_encoder_precision_parity.py  t5_flex_buckets.py  t5_sampling_hf_generate.py  t5_sampling_parity_cache.py  t5_sampling_parity_nocache.py  t5_serialize.py  t5_serialize_dtensor.py  tokenizer_hf_to_sentencepiece.py  umt5_encdec_parity.py  umt5_encoder_parity.py
